use Arena in example